--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
   <section class="footer-autora-horizontal">
     <h1 class="saga-titulo-autora">Sobre a Autora</h1>
     <div class="autora-horizontal">
-      <img src="../img/AUTORA.jpg" alt="Foto da autora" class="autora-img" />
+      <img src="img/AUTORA.jpg" alt="Foto da autora" class="autora-img" />
       <div class="autora-texto">
         <p><strong>ALINE PÁDUA</strong><br>Aline, Line, criadora do #Alineverso, e como você quiser.</p>
         <p>Feita por músicas (swiftie e stay de carteirinha)...</p>
