--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -247,6 +247,11 @@
           <p class="titulo-livro">Usada & Grávida do Chefe da Máfia</p>
         </a>
 
+        <a href="https://www.amazon.com.br/dp/B0FHG92B6T?ref=cm_sw_r_ffobk_cso_wa_mwn_dp_Y283406C1D8M72Q4FRJZ&ref_=cm_sw_r_ffobk_cso_wa_mwn_dp_Y283406C1D8M72Q4FRJZ&social_share=cm_sw_r_ffobk_cso_wa_mwn_dp_Y283406C1D8M72Q4FRJZ&bestFormat=true&previewDohEventScheduleTesting=C&fbclid=PAZXh0bgNhZW0CMTEAAac-LPktljxPyfDG130aXpvAJylCzfzQSYZsQuYpnJgvUBvyrAUT4DeqqeXovA_aem_wkqX-_D04wwjuEY2vGvgZQ" class="card">
+          <img src="../img_capas/TROCADA PELO CHEFE DA MÁFIA QUE NÃO ME AMA.jpg" alt="Capa do Livro 1.2 da saga Familía Hansen" />
+          <p class="titulo-livro">TROCADA PELO CHEFE DA MÁFIA QUE NÃO ME AMA </p>
+        </a>
+
 
 
         
