--- a/html/autora.html
+++ b/html/autora.html
@@ -62,8 +62,8 @@
       <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
         <img src="../ilustra/14.jpg" alt="Imagem 14">
       </a>
-      <p>“14 Frase do Livro”</p>
-      <p>LANÇAMENTO</p>
+        <!-- <p>“14 Frase do Livro”</p>  -->
+      <p>TROCADA PELO CHEFE DA MÁFIA QUE NÃO ME AMA</p>
     </div>
 
 
@@ -71,7 +71,7 @@
       <a href="https://www.instagram.com/p/DJaG8HRxL3i/" target="_blank">
         <img src="../ilustra/13.jfif" alt="Imagem 13">
       </a>
-      <p>“13 Frase do Livro”</p>
+        <!-- <p>“13 Frase do Livro”</p> -->
       <p>GRÁVIDA & DESPREZADA PELO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 5)</p>
     </div>
 
@@ -80,7 +80,7 @@
       <a href="https://www.instagram.com/p/DHJQgnjs5PZ/" target="_blank">
         <img src="../ilustra/12.jfif" alt="Imagem 12">
       </a>
-      <p>“12 Frase do Livro”</p>
+        <!-- <p>“12 Frase do Livro”</p> -->
       <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6)</p>
     </div>
 
@@ -89,7 +89,7 @@
       <a href="https://www.instagram.com/p/DE5ALX3uCvk/" target="_blank">
         <img src="../ilustra/11.jfif" alt="Imagem 11">
       </a>
-      <p>“11 Frase do Livro”</p>
+        <!-- <p>“11 Frase do Livro”</p> -->
       <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL</p>
     </div>
 
@@ -98,7 +98,7 @@
       <a href="https://www.instagram.com/p/DDaeE1NPvjw/" target="_blank">
         <img src="../ilustra/10.jfif" alt="Imagem 10">
       </a>
-      <p>“10 Frase do Livro”</p>
+        <!-- <p>“10 Frase do Livro”</p> -->
       <p>UM BEBÊ ESCONDIDO DO CHEFE DO CARTEL: Casada Por Obrigação</p>
     </div>
 
@@ -106,7 +106,7 @@
       <a href="https://www.instagram.com/p/DDUnwomueas/" target="_blank">
         <img src="../ilustra/9.jfif" alt="Imagem 9">
       </a>
-      <p>“9 Frase do Livro”</p>
+       <!--  <p>“9 Frase do Livro”</p> -->
       <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL</p>
     </div>
 
@@ -114,7 +114,7 @@
       <a href="https://www.instagram.com/p/DCIAhmwP_YJ/" target="_blank">
         <img src="../ilustra/8.jfif" alt="Imagem 8">
       </a>
-      <p>“8 Frase do Livro”</p>
+        <!-- <p>“8 Frase do Livro”</p> -->
       <p>Rejeitada & Casada com o herdeiro da máfia</p>
     </div>
 
@@ -122,7 +122,7 @@
       <a href="https://www.instagram.com/p/DBmgHKLPs-n/" target="_blank">
         <img src="../ilustra/7.jfif" alt="Imagem 7">
       </a>
-      <p>“7 Frase do Livro”</p>
+       <!--  <p>“7 Frase do Livro”</p> -->
       <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6)</p>
     </div>
 
@@ -130,7 +130,7 @@
       <a href="https://www.instagram.com/p/DBL4zuZubok/" target="_blank">
         <img src="../ilustra/6.jfif" alt="Imagem 6">
       </a>
-      <p>“6 Frase do Livro”</p>
+       <!--  <p>“6 Frase do Livro”</p> -->
       <p>REJEITADA & CASADA COM O MAFIOSO GREGO: Poseidon (A QUEDA DA MÁFIA GREGA Livro 3)</p>
     </div>
 
@@ -139,7 +139,7 @@
       <a href="https://www.instagram.com/p/C9dnRdEPcNH/" target="_blank">
         <img src="../ilustra/5.jfif" alt="Imagem 5">
       </a>
-      <p>“5 Frase do Livro”</p>
+      <!--   <p>“5 Frase do Livro”</p> -->
       <p>UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA</p>
     </div>
 
@@ -147,7 +147,7 @@
       <a href="https://www.instagram.com/p/C8f2KjFM96Q/" target="_blank">
         <img src="../ilustra/4.jfif" alt="Imagem 4">
       </a>
-      <p>“4 Frase do Livro”</p>
+       <!--  <p>“4 Frase do Livro”</p> -->
       <p>TRAÍDA & GRÁVIDA DO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 7)</p>
     </div>
 
@@ -156,7 +156,7 @@
       <a href="https://www.instagram.com/p/C7H-V89Pbdo/" target="_blank">
         <img src="../ilustra/3.jfif" alt="Imagem 3">
       </a>
-      <p>“3 Frase do Livro”</p>
+        <!-- <p>“3 Frase do Livro”</p> -->
       <p>ROUBADA NO ALTAR PELO MAFIOSO GREGO: Ares (A QUEDA DA MÁFIA GREGA Livro 2)</p>
     </div>
 
@@ -164,7 +164,7 @@
       <a href="https://www.instagram.com/p/C6pTmgFL1Kp/" target="_blank">
         <img src="../ilustra/2.jfif" alt="Imagem 2">
       </a>
-      <p>“2 Frase do Livro”</p>
+        <!-- <p>“2 Frase do Livro”</p> -->
       <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL</p>
     </div>
 
@@ -172,7 +172,7 @@
       <a href="https://www.instagram.com/p/C513M0nLMbC/" target="_blank">
         <img src="../ilustra/1.jfif" alt="Imagem 1">
       </a>
-      <p>“1 Frase do Livro”</p>
+       <!--  <p>“1 Frase do Livro”</p> -->
       <p>GRÁVIDA & DESPREZADA PELO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 5)</p>
     </div>
 
