--- a/index.html
+++ b/index.html
@@ -751,8 +751,8 @@
 
 
 
-<footer class="footer">
-  <section class="footer-autora-horizontal">
+<footer class="footer" id="footer-final">
+  <section class="footer-autora-horizontal" id="sobre-autora">
     <h1 class="saga-titulo-autora">Sobre a Autora</h1>
     <div class="autora-horizontal">
       <img src="img/AUTORA.jpg" alt="Foto da autora" class="autora-img" />
