--- a/html/autora.html
+++ b/html/autora.html
@@ -42,16 +42,27 @@
         
  <!-- ===== GALERIA DE FOTOS ===== -->
 <section class="galeria" id="galeria">
-  <h2>Aline Pádua</h2>
-  <div class="galeria-grid">
-    <img src="../img/autorafeed.jfif" alt="Foto 1">
-    <img src="../img/autora1.jfif" alt="Foto 2">
-    <img src="../img/autora2.jfif" alt="Foto 3">
-    <img src="../img/autora3.jfif" alt="Foto 4">
-    <img src="../img/autora4.jfif" alt="Foto 5">
-    <img src="../img/autora5.jfif" alt="Foto 6">
-   
-  </div>
+    <h2>Aline Pádua</h2>
+    <div class="galeria-grid">
+        <a href="https://www.instagram.com/p/CvI437krP6p/" target="_blank">
+            <img src="../img/autorafeed.jfif" alt="Foto 1">
+        </a>
+        <a href="https://www.instagram.com/p/ClM3LB1r3wi/" target="_blank">
+            <img src="../img/autora1.jfif" alt="Foto 2">
+        </a>
+        <a href="https://www.instagram.com/p/BmR7HcqnslW/" target="_blank">
+            <img src="../img/autora2.jfif" alt="Foto 3">
+        </a>
+        <a href="https://www.instagram.com/p/Cgr0Bq2r08U/?img_index=1" target="_blank">
+            <img src="../img/autora3.jfif" alt="Foto 4">
+        </a>
+        <a href="https://www.instagram.com/p/B-vD6zNDRIW/" target="_blank">
+            <img src="../img/autora4.jfif" alt="Foto 5">
+        </a>
+        <a href="https://www.instagram.com/p/CfuzPclLn3a/?img_index=1" target="_blank">
+            <img src="../img/autora5.jfif" alt="Foto 6">
+        </a>
+    </div>
 </section>
          
           <!-- ===== CARROSSEL ===== -->
