--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       
 
     <a href="https://www.amazon.com.br/EVITADA-PELO-HOMEM-QUE-N%C3%83O-ebook/dp/B0C9VX8TYL/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2XBTJYOAPP6W5&dib=eyJ2IjoiMSJ9.Nos9p7n2fXlAWCErPW1aW9qMn0anzNcUo7PcH5U6m_Q.5omAEkPNImyY5EQOzMi3KJ-fYyP4awcSa_0Xrn80jy8&dib_tag=se&keywords=ALINE+PADUA+Evitada+pelo+Homem+que+N%C3%A3o+Me+Ama&qid=1752675442&s=digital-text&sprefix=aline+padua+evitada+pelo+homem+que+n%C3%A3o+me+ama+%2Cdigital-text%2C154&sr=1-1" class="card">
-      <img src="SAGA9_LIVRO3.jpg" alt="Capa do Spin-off da saga FAMÍLIA SOARES" />
+      <img src="./img_capas/SAGA9_LIVRO3.jpg" alt="Capa do Spin-off da saga FAMÍLIA SOARES" />
       <p class="titulo-livro">Evitada pelo Homem que Não Me Ama (Spin-off da série da Família Soares)</p>
     </a> 
         
