--- a/html/autora.html
+++ b/html/autora.html
@@ -30,9 +30,9 @@
                     <img src="../img/AUTORA.jpg" alt="Foto da autora" class="autora-img" />
                     <div class="autora-texto">
                       <p><strong>ALINE PÁDUA</strong><br>Aline, Line, criadora do #Alineverso, e como você quiser.</p>
-                        <p>Feita por músicas (swiftie e stay de carteirinha)...</p>
-                        <p>Mineira que começou sua jornada...</p>
-                        <p>Agora, escreve seus próprios...</p>
+                        <p> Feita por músicas (swiftie e stay de carteirinha), novelas (dorama, mexicana, colombiana, turca, e o que mais tiver), gatos e livros (apaixonada por fanfics).</p>
+                        <p> Mineira que começou sua jornada com livros através de poesias na escola primária e se apaixonou por completo por eles quando conheceu os romances aos quatorze anos. </p>
+                        <p> Agora, escreve seus próprios e os publica de forma independente. Encontre-me no instagram <strong> @alineapadua </strong> </p>
 
                     </div>
                 </div>
