--- a/index.html
+++ b/index.html
@@ -350,6 +350,13 @@
           <img src="./img_capas/SAGA7_LIVRO4.jpg" alt="Capa do Livro 4 da saga IRMÃS JUNQUEIRA" />
           <p class="titulo-livro">Um Casamento de Mentirinha com o Cowboy</p>
         </a>
+
+        <a href="https://www.amazon.com.br/gp/product/B0CN5LJPFQ?ref_=dbs_mng_crcw_0&storeType=ebooks" class="card">
+          <img src="./img_capas/SAGA7_LIVRO5.jpg" alt="Capa do Livro 4 da saga IRMÃS JUNQUEIRA" />
+          <p class="titulo-livro">Rejeitada & Grávida DO VIÚVO QUE NÃO ME AMA (IRMÃS JUNQUEIRA)</p>
+        </a>
+
+        
       </div>
     </section>
 <!-- FIM SAGA 7 -->
