--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -150,6 +150,13 @@
           <p class="titulo-livro">Uma Gravidez de Mentirinha com o Viúvo</p>
         </a>
 
+
+        <a href="https://www.amazon.com.br/gp/product/B0CN5LJPFQ?ref_=dbs_mng_crcw_0&storeType=ebooks" class="card">
+          <img src="./img_capas/SAGA7_LIVRO5.jpg" alt="Capa do Livro 5 da saga IRMÃS JUNQUEIRA" />
+          <p class="titulo-livro">Rejeitada & Grávida DO VIÚVO QUE NÃO ME AMA (IRMÃS JUNQUEIRA)</p>
+        </a>
+
+        
         <a href="https://www.amazon.com.br/UM-FILHO-SURPRESA-PARA-CEO-ebook/dp/B0CQHTHRFJ/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=10ZM8PLXD80PI&dib=eyJ2IjoiMSJ9.bZN0Mt6_IMZ-S5LxGLBEJ3oMSyQZbKHtrPxPfumL-Fk3WyHvWs8LIMu0589CNWEALICC_k9SYMdpwx-4OZdFXPvIquUXRxFuklmhVjoW5p4.YgGhSPsNWE_IKeh_YecRVu7eR0sgXKQLOFfamzUxdO4&dib_tag=se&keywords=aline+padua+Um+Beb%C3%AA+para+o+CEO+que+N%C3%A3o+Me+Ama&qid=1751590769&s=digital-text&sprefix=aline+padua+um+beb%C3%AA+para+o+ceo+que+n%C3%A3o+me+ama%2Cdigital-text%2C216&sr=1-1" class="card">
           <img src="../img_capas/SAGA1_LIVRO1.jpg" alt="Capa do Livro 1 da saga OS HANSEN" />
           <p class="titulo-livro">Um Bebê para o CEO que Não Me Ama</p>
