--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -167,6 +167,10 @@
           <p class="titulo-livro">FELIZ NATAL, DANIELA TORRES-REIS (Um Especial de Natal)</p>
         </a>
 
+        <a href="https://www.amazon.com.br/gp/product/B0CQQVPKK3?ref_=dbs_m_mng_rwt_calw_tkin_5&storeType=ebooks" class="card">
+          <img src="./img_capas/SAGA4_LIVRO6.jpg" alt="Capa do Livro 6 da saga OS KANGS" />
+          <p class="titulo-livro">O Mafioso que Me Ama: Um Conto de Grávida do Mafioso que Não Me Ama (Família Kang)</p>
+        </a>
         
         <a href="https://www.amazon.com.br/filha-para-MAFIOSO-HANSEN-Livro-ebook/dp/B0CSB62H9Z?ref_=saga_dp_bnx_dsk_dp&qid=1751590769&sr=1-1" class="card">
           <img src="../img_capas/SAGA1_LIVRO2.jpg" alt="Capa do Livro 2 da saga OS HANSEN" />
@@ -252,6 +256,11 @@
         <a href="https://www.amazon.com.br/USADA-GR%C3%81VIDA-DO-CHEFE-M%C3%81FIA-ebook/dp/B0F7V2PCSP" class="card">
           <img src="../img_capas/SAGA2_LIVRO4.jpg" alt="Capa do Livro 4 da saga Máfia Grega" />
           <p class="titulo-livro">Usada & Grávida do Chefe da Máfia</p>
+        </a>
+
+        <a href="https://www.amazon.com.br/SEGUNDA-OP%C3%87%C3%83O-DO-MAFIOSO-GR%C3%81VIDA-ebook/dp/B0FDSX7336/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=30DLEK2QCW566&dib=eyJ2IjoiMSJ9.CcoRTEw3EF4hwQQjRZw8Md_DKRWmId64AXDMz6Hhkdj4etHUqrAxAHlX_Y9hH2g9qnqibVNtCzVOY5zIazvgyZEm3nAJenLNbh52IXLIC11QewJiHWB4MDFpkWowNB1J0_BTlQz3YtqjZxAbyW8r9cjZffg0--KlVbVBsOKmjjC0jvGFQSPJW3EWT0UnakID091mhXR7bfah9pbLCqKaY7aGKnMqInRR2RwCMTHN3t4.2pKfX10Aw8udCVwSbd7V-0cEf8sPBlnIewTVL65t5l0&dib_tag=se&keywords=ALINE+PADUA&qid=1751592505&s=digital-text&sprefix=aline+padua%2Cdigital-text%2C206&sr=1-1" class="card">
+          <img src="./img_capas/SAGA4_LIVRO8.jpg" alt="Capa do Livro 5 da saga OS KANGS" />
+          <p class="titulo-livro">A SEGUNDA OPÇÃO DO MAFIOSO: GRÁVIDA & CASADA COM ELE</p>
         </a>
 
         <a href="https://www.amazon.com.br/dp/B0FHG92B6T?ref=cm_sw_r_ffobk_cso_wa_mwn_dp_Y283406C1D8M72Q4FRJZ&ref_=cm_sw_r_ffobk_cso_wa_mwn_dp_Y283406C1D8M72Q4FRJZ&social_share=cm_sw_r_ffobk_cso_wa_mwn_dp_Y283406C1D8M72Q4FRJZ&bestFormat=true&previewDohEventScheduleTesting=C&fbclid=PAZXh0bgNhZW0CMTEAAac-LPktljxPyfDG130aXpvAJylCzfzQSYZsQuYpnJgvUBvyrAUT4DeqqeXovA_aem_wkqX-_D04wwjuEY2vGvgZQ" class="card">
