--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -145,14 +145,9 @@
           <p class="titulo-livro">Uma Gravidez Inesperada para o Mafioso</p>
         </a>
 
-          <a href="https://www.amazon.com.br/gp/product/B0CKYGLN6Z?ref_=dbs_m_mng_rwt_calw_tkin_2&storeType=ebooks" class="card">
-          <img src="../img_capas/SAGA7_LIVRO3.jpg" alt="Capa do Livro 3 da saga IRMÃS JUNQUEIRA" />
-          <p class="titulo-livro">Uma Gravidez de Mentirinha com o Viúvo</p>
-        </a>
-
 
         <a href="https://www.amazon.com.br/gp/product/B0CN5LJPFQ?ref_=dbs_mng_crcw_0&storeType=ebooks" class="card">
-          <img src="./img_capas/SAGA7_LIVRO5.jpg" alt="Capa do Livro 5 da saga IRMÃS JUNQUEIRA" />
+          <img src="../img_capas/SAGA7_LIVRO5.jpg" alt="Capa do Livro 5 da saga IRMÃS JUNQUEIRA" />
           <p class="titulo-livro">Rejeitada & Grávida DO VIÚVO QUE NÃO ME AMA (IRMÃS JUNQUEIRA)</p>
         </a>
 
@@ -168,7 +163,7 @@
         </a>
 
         <a href="https://www.amazon.com.br/gp/product/B0CQQVPKK3?ref_=dbs_m_mng_rwt_calw_tkin_5&storeType=ebooks" class="card">
-          <img src="./img_capas/SAGA4_LIVRO6.jpg" alt="Capa do Livro 6 da saga OS KANGS" />
+          <img src="../img_capas/SAGA4_LIVRO6.jpg" alt="Capa do Livro 6 da saga OS KANGS" />
           <p class="titulo-livro">O Mafioso que Me Ama: Um Conto de Grávida do Mafioso que Não Me Ama (Família Kang)</p>
         </a>
         
@@ -259,7 +254,7 @@
         </a>
 
         <a href="https://www.amazon.com.br/SEGUNDA-OP%C3%87%C3%83O-DO-MAFIOSO-GR%C3%81VIDA-ebook/dp/B0FDSX7336/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=30DLEK2QCW566&dib=eyJ2IjoiMSJ9.CcoRTEw3EF4hwQQjRZw8Md_DKRWmId64AXDMz6Hhkdj4etHUqrAxAHlX_Y9hH2g9qnqibVNtCzVOY5zIazvgyZEm3nAJenLNbh52IXLIC11QewJiHWB4MDFpkWowNB1J0_BTlQz3YtqjZxAbyW8r9cjZffg0--KlVbVBsOKmjjC0jvGFQSPJW3EWT0UnakID091mhXR7bfah9pbLCqKaY7aGKnMqInRR2RwCMTHN3t4.2pKfX10Aw8udCVwSbd7V-0cEf8sPBlnIewTVL65t5l0&dib_tag=se&keywords=ALINE+PADUA&qid=1751592505&s=digital-text&sprefix=aline+padua%2Cdigital-text%2C206&sr=1-1" class="card">
-          <img src="./img_capas/SAGA4_LIVRO8.jpg" alt="Capa do Livro 5 da saga OS KANGS" />
+          <img src="../img_capas/SAGA4_LIVRO8.jpg" alt="Capa do Livro 5 da saga OS KANGS" />
           <p class="titulo-livro">A SEGUNDA OPÇÃO DO MAFIOSO: GRÁVIDA & CASADA COM ELE</p>
         </a>
 
