--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
         <a href="https://www.amazon.com.br/gp/product/B0CN5LJPFQ?ref_=dbs_mng_crcw_0&storeType=ebooks" class="card">
           <img src="./img_capas/SAGA7_LIVRO5.jpg" alt="Capa do Livro 4 da saga IRMÃS JUNQUEIRA" />
-          <p class="titulo-livro">Rejeitada & Grávida DO VIÚVO QUE NÃO ME AMA ( Spin-off IRMÃS JUNQUEIRA - REIS )</p>
+          <p class="titulo-livro">Rejeitada & Grávida DO VIÚVO QUE NÃO ME AMA ( Spin-off  <br> <br> IRMÃS JUNQUEIRA - REIS )</p>
         </a>
 
         
