--- a/html/autora.html
+++ b/html/autora.html
@@ -196,8 +196,19 @@
 
 
     <!-- Footer com redes sociais -->
-    
-   <footer class="footer">
+   <footer class="footer" id="footer-final">
+  <section class="footer-autora-horizontal" id="sobre-autora">
+    <h1 class="saga-titulo-autora">Autora</h1>
+    <div class="autora-horizontal">
+      <img src="img/AUTORA.jpg" alt="Foto da autora" class="autora-img" />
+      <div class="autora-texto">
+        <p><strong>ALINE PÁDUA</strong><br>Aline, Line, criadora do #Alineverso, e como você quiser.</p>
+        
+      </div>
+    </div>
+  </section>
+
+  
   <div class="footer-icons">
     <a href="https://www.instagram.com/alineapadua/" target="_blank" aria-label="Instagram">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
@@ -209,6 +220,8 @@
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/amazon.svg" alt="Amazon">
     </a>
   </div>
+  
+  
   <p class="footer-copy">© 2025 Lise. Todos os direitos reservados.</p>
 </footer>
             <button class="theme-toggle" id="toggleTheme">🌙 Tema Escuro</button>
