--- a/html/autora.html
+++ b/html/autora.html
@@ -83,7 +83,7 @@
         <img src="../ilustra/13.jfif" alt="Imagem 13">
       </a>
         <!-- <p>“13 Frase do Livro”</p> -->
-      <p>GRÁVIDA & DESPREZADA PELO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 5)</p>
+      <p>REJEITADA & CASADA COM O MAFIOSO GREGO: Poseidon (A QUEDA DA MÁFIA GREGA Livro 3)</p>
     </div>
 
 
@@ -92,7 +92,7 @@
         <img src="../ilustra/12.jfif" alt="Imagem 12">
       </a>
         <!-- <p>“12 Frase do Livro”</p> -->
-      <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6)</p>
+      <p>ROUBADA NO ALTAR PELO MAFIOSO GREGO: Ares (A QUEDA DA MÁFIA GREGA Livro 2)</p>
     </div>
 
 
@@ -101,7 +101,7 @@
         <img src="../ilustra/11.jfif" alt="Imagem 11">
       </a>
         <!-- <p>“11 Frase do Livro”</p> -->
-      <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL</p>
+      <p>UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA</p>
     </div>
 
 
@@ -110,7 +110,7 @@
         <img src="../ilustra/10.jfif" alt="Imagem 10">
       </a>
         <!-- <p>“10 Frase do Livro”</p> -->
-      <p>UM BEBÊ ESCONDIDO DO CHEFE DO CARTEL: Casada Por Obrigação</p>
+      <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3)</p>
     </div>
 
     <div class="slide">
@@ -118,7 +118,7 @@
         <img src="../ilustra/9.jfif" alt="Imagem 9">
       </a>
        <!--  <p>“9 Frase do Livro”</p> -->
-      <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL</p>
+      <p>REJEITADA & CASADA COM O HERDEIRO DA MÁFIA</p>
     </div>
 
     <div class="slide">
@@ -126,7 +126,7 @@
         <img src="../ilustra/8.jfif" alt="Imagem 8">
       </a>
         <!-- <p>“8 Frase do Livro”</p> -->
-      <p>Rejeitada & Casada com o herdeiro da máfia</p>
+      <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3) </p>
     </div>
 
      <div class="slide">
@@ -134,7 +134,7 @@
         <img src="../ilustra/7.jfif" alt="Imagem 7">
       </a>
        <!--  <p>“7 Frase do Livro”</p> -->
-      <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6)</p>
+      <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL: Abandonada Por Ele (Cartel García Livro 3) </p>
     </div>
 
       <div class="slide">
@@ -142,7 +142,7 @@
         <img src="../ilustra/6.jfif" alt="Imagem 6">
       </a>
        <!--  <p>“6 Frase do Livro”</p> -->
-      <p>REJEITADA & CASADA COM O MAFIOSO GREGO: Poseidon (A QUEDA DA MÁFIA GREGA Livro 3)</p>
+      <p>UM BEBÊ ESCONDIDO DO CHEFE DO CARTEL: Casada Por Obrigação (Cartel García Livro 2)</p>
     </div>
 
 
@@ -151,7 +151,7 @@
         <img src="../ilustra/5.jfif" alt="Imagem 5">
       </a>
       <!--   <p>“5 Frase do Livro”</p> -->
-      <p>UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA</p>
+      <p>TRAÍDA & GRÁVIDA DO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 7)</p>
     </div>
 
       <div class="slide">
@@ -159,7 +159,7 @@
         <img src="../ilustra/4.jfif" alt="Imagem 4">
       </a>
        <!--  <p>“4 Frase do Livro”</p> -->
-      <p>TRAÍDA & GRÁVIDA DO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 7)</p>
+      <p>A BABÁ REJEITADA PELO COWBOY VIÚVO</p>
     </div>
 
 
@@ -168,7 +168,7 @@
         <img src="../ilustra/3.jfif" alt="Imagem 3">
       </a>
         <!-- <p>“3 Frase do Livro”</p> -->
-      <p>ROUBADA NO ALTAR PELO MAFIOSO GREGO: Ares (A QUEDA DA MÁFIA GREGA Livro 2)</p>
+      <p> VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6) </p>
     </div>
 
     <div class="slide">
@@ -176,7 +176,7 @@
         <img src="../ilustra/2.jfif" alt="Imagem 2">
       </a>
         <!-- <p>“2 Frase do Livro”</p> -->
-      <p>UMA FILHA REJEITADA PELO BRAÇO DIREITO DO CARTEL</p>
+      <p>VENDIDA AO MAFIOSO QUE NÃO ME AMA (OS HANSEN Livro 6) </p>
     </div>
 
     <div class="slide">
