--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -263,6 +263,11 @@
           <p class="titulo-livro">TROCADA PELO CHEFE DA MÁFIA QUE NÃO ME AMA </p>
         </a>
 
+         <a href="https://www.amazon.com.br/CASADA-COM-CHEFE-M%C3%81FIA-QUE-ebook/dp/B0FKQGGBJK/ref=sr_1_1?crid=2RHCDJ3XB3IG6&dib=eyJ2IjoiMSJ9.X60bN2OyYQHfaf43wNe17FTNNHKs1lq2igwmFEuRPQWpGduQ4OcLL5NGx23iXNpVrOfkx-UW6C8QItwermiPSzCou1hLivWk-FR8ZwZuxS59Uuhom7l6qpuGigIz4kNrbnoKoum6H_RjpDxYMy1NLfAAg8y3UB25BkYT6b-sRPViVOJtne637-CKzEkAfX_GBnJS34xJMbCWN0aS8P1-naywHTambZEQsq_AbF9WLzAsaBxHNFSJ249IlmK6raogfNSwTvX0o4R6koTOgvU8zKwvOGAPxOZbPLaHcbeS9eY.mMATSozSTix-Tsi0p3XIyXSBw4DLPRqOB7z-wNGRKnc&dib_tag=se&keywords=aline+padua&qid=1754506583&sprefix=aline+pad%2Caps%2C191&sr=8-1" class="card">
+          <img src="./img_capas/CASADA COM O CHEFE DA MÁFIA QUE NÃO ME AMA.jpg" alt="Capa do Livro 2 " />
+          <p class="titulo-livro">CASADA COM O CHEFE DA MÁFIA QUE NÃO ME AMA </p>
+        </a>
+
 
 
         
@@ -469,3 +474,4 @@
 </body>
 
 </html>
+
