--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -269,7 +269,7 @@
         </a>
 
         <a href="https://www.amazon.com.br/ESQUECIDA-GR%C3%81VIDA-DO-MAFIOSO-GREGO-ebook/dp/B0FMS6ZXTL?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.FBTshXutBrGXBnSg8Y0CHpMkMgrEWxBYF61qqNluiDIGBtgJYdoqvLSEdKcHAq1vjZ1NfSn5QzWMtyMLdMcLZwcufvLW4VyYZCgNW-g1Sh3WQdyRURYg5jy7KM9_MGL8-BZ2sqVp9ZwcEUj8z8L1e5uwRK7j6lISmm6IkEUSRtV2MsRzYvjBDKQMu1AuAxgAQvGlUTTcHpriifVAlLncBbrbpIT8G2cXK-Ywc6BfbXI.UP6FgN5i7bqHifbly0-ALsdYnQkAp4IxquZ5aUlVJSo&dib_tag=AUTHOR" class="card">
-          <img src="../img_capas/img/ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO Apolo.jpg" alt="Capa do Livro 2 " />
+          <img src="../img_capas/ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO Apolo.jpg" alt="Capa do Livro 2 " />
           <p class="titulo-livro">ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO: Apolo </p>
         </a>
 
@@ -479,6 +479,7 @@
 </body>
 
 </html>
+
 
 
 
