--- a/html/autora.html
+++ b/html/autora.html
@@ -69,6 +69,25 @@
 <div class="carrossel-container" id="carrossel">
   <div class="carrossel">   
 
+
+
+     <div class="slide ativo">
+      <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
+        <img src="../ilustra/16.jpg" alt="Imagem 16">
+      </a>
+        <!-- <p>“16 Frase do Livro”</p>  -->
+      <p>TRAÍDA & GRÁVIDA DO CHEFE DA MÁFIA GREGA</p>
+    </div>
+    
+    <div class="slide ativo">
+      <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
+        <img src="../ilustra/15.jpg" alt="Imagem 15">
+      </a>
+        <!-- <p>“15 Frase do Livro”</p>  -->
+      <p>ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO</p>
+    </div>
+
+    
     <div class="slide ativo">
       <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
         <img src="../ilustra/14.jpg" alt="Imagem 14">
@@ -265,3 +284,4 @@
 </body>
 
 </html>
+
