--- a/html/autora.html
+++ b/html/autora.html
@@ -73,7 +73,7 @@
 
      <div class="slide ativo">
       <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
-        <img src="../ilustra/16.jpg" alt="Imagem 16">
+        <img src="../ilustra/16.jpeg" alt="Imagem 16">
       </a>
         <!-- <p>“16 Frase do Livro”</p>  -->
       <p>TRAÍDA & GRÁVIDA DO CHEFE DA MÁFIA GREGA</p>
@@ -81,7 +81,7 @@
     
     <div class="slide ativo">
       <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
-        <img src="../ilustra/15.jpg" alt="Imagem 15">
+        <img src="../ilustra/15.jpeg" alt="Imagem 15">
       </a>
         <!-- <p>“15 Frase do Livro”</p>  -->
       <p>ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO</p>
@@ -284,4 +284,5 @@
 </body>
 
 </html>
+
 
