--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           <img src="./img_capas/UM CASAMENTO INESPERADO COM O INIMIGO.jpg" alt="Capa do Livro 2 " />
           <p class="titulo-livro">UM CASAMENTO INESPERADO COM O INIMIGO </p>
         </a>
+
+       <a href="https://www.amazon.com.br/ESQUECIDA-GR%C3%81VIDA-DO-MAFIOSO-GREGO-ebook/dp/B0FMS6ZXTL?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.ZLjlCd8n_4fpsd18lO4ngm3YoZBeo5SRvi70HGJIkPbUXlT27KuCWetbR3cO6ScmF-7taYU2K2yb5I2EyueEzE2rNa6roOf9AUP_1zHACovhqzpP00azi48sGQZqyFsWH1ptg49kDc2Cw9tixlbX8zN7avxw_bHm-oY2VQYG5GMMXqkxX3GOZmAiHdstFjtz83YcOH5Gix2n9TlMqNI6FKLUXN1K9wIgyI9V3e5KUTE.igcgV3jB_yvZbj3Lx9EPm1Ece8h1dvFAoWBW8CdE5o8&dib_tag=AUTHOR" class="card">
+          <img src="./img_capas/ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO Apolo A QUEDA DA MÁFIA GREGA Livro 5.jpg" alt="Capa do Livro 2 " />
+          <p class="titulo-livro">ESQUECIDA & GRÁVIDA DO MAFIOSO GREGO: Apolo </p>
+        </a>
         
       </div>
 
