--- a/html/EsquemaDePiramide.html
+++ b/html/EsquemaDePiramide.html
@@ -278,6 +278,11 @@
           <p class="titulo-livro">TRAÍDA & GRÁVIDA DO CHEFE DA MÁFIA GREGA - ZEUS </p>
         </a>
 
+        <a href="https://www.amazon.com.br/FALSA-NOIVA-DO-MAFIOSO-ebook/dp/B0FTXWYYK2?ref_=ast_author_dp&th=1&psc=1&dib=eyJ2IjoiMSJ9.Xi3XL1j0SJNeSzhu7u74wvXswOWIHT6Lz5KYgLQmZD50A0u8CSxoFOrXimAf5MQogyGE4kPFnLk7fnheLTzcv3Y9b-ujcylvK63chcrBnyvRiExymmozoseSQJy1i7rUqyojJe70J7Su9pR6IeegYEvrGcmvioC2A8AtjBAwC2PZsOm0NjQ4HVzuEgBIr10I8njTcRQudUUIr93w7Hhw1xJOsl2MnkcVQIM0Mtqv7rY.XlI6vKhfuesCc0cjPZ9yfHz51V4StzfvUZCjH3BCY3Y&dib_tag=AUTHOR" class="card">
+          <img src="../img_capas/A FALSA NOIVA DO MAFIOSO.jpg" alt="Capa do Livro  " />
+          <p class="titulo-livro"> A FALSA NOIVA DO MAFIOSO</p>
+        </a>
+
 
 
         
@@ -484,6 +489,7 @@
 </body>
 
 </html>
+
 
 
 
