--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="saga" id="saga1.2">
           <h2 class="saga-titulo">
             <img src="./img/arvore-genealogica.png" alt="Logo da saga" class="saga-logo" />
-            DESTAQUES
+            LANÇAMENTOS
           </h2>
 
            <div class="card-container">
