--- a/html/autora.html
+++ b/html/autora.html
@@ -71,8 +71,25 @@
 
 
 
+
+      <div class="slide ativo">
+      <a href="https://www.instagram.com/p/DPe6hggkdEd/?igsh=Z3VyaDhsazdmZHZy" target="_blank">
+        <img src="../ilustra/18.jfif" alt="Imagem 18">
+      </a>
+        <!-- <p>“18 Frase do Livro”</p>  -->
+      <p>A FALSA NOIVA DO MAFIOSO</p>
+    </div>
+    
+  <div class="slide ativo">
+      <a href="https://www.instagram.com/p/DPbaFDpkfB6/?igsh=MWxqZ255ZHQ1MWhmMA%3D%3D" target="_blank">
+        <img src="../ilustra/17.jfif" alt="Imagem 17">
+      </a>
+        <!-- <p>“17 Frase do Livro”</p>  -->
+      <p>A FALSA NOIVA DO MAFIOSO</p>
+    </div>
+    
      <div class="slide ativo">
-      <a href="https://www.instagram.com/p/DL6EeqmxXT4/" target="_blank">
+      <a href="https://www.instagram.com/p/DPHrOj_EV9D/?igsh=aGNtY3M0eW5pajVs" target="_blank">
         <img src="../ilustra/16.jpeg" alt="Imagem 16">
       </a>
         <!-- <p>“16 Frase do Livro”</p>  -->
@@ -284,5 +301,6 @@
 </body>
 
 </html>
+
 
 
